# directlook

./: .gitignore  CMakeLists.txt  README.md  cuantizador.py  extractor.py  inpainting_fp32.pth  procesador_dataset.py  test_ipc.py
client/: CMakeLists.txt
client/src/: tray.cpp
core/: CMakeLists.txt
core/src/: InpaintingEngine.cpp  InpaintingEngine.hpp  cpu_monitor.cpp  cpu_monitor.h  daemon.cpp  geometry_engine.cpp  geometry_engine.hpp  ipc_server.h  ipc_unix.cpp  ipc_unix.h  ipc_windows.cpp  ipc_windows.h  protocol.h  temporal_filter.cpp  temporal_filter.hpp  video_sink.h  video_sink_unix.cpp  video_sink_unix.h  video_sink_windows.cpp  video_sink_windows.h  vision_pipeline.cpp  vision_pipeline.h
ipc/: protocol.h
